# CMake

./: CMakeLists.txt  main.c  readME.md
00_basics/: CMakeLists.txt  main.c  readME.md
01_Organizing_Projects_and_Adding_Libraries/: CMakeLists.txt  main.c  readME.md
01_Organizing_Projects_and_Adding_Libraries/includes/: math_utils.h
01_Organizing_Projects_and_Adding_Libraries/src/: math_utils.c
03_Variables_Options_Subdirectories/: readME.md
includes/: lib.h
src/: lib.c
